--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -506,6 +506,10 @@ header.fixed .navbar {
     font-weight: 500;
 }
 
+.navbar-expand-lg .navbar-nav .nav-link::before {
+    display: none;
+}
+
 .navbar-expand-lg .navbar-nav .nav-link:hover {
     color: var(--primaryclr);
 }
