--- a/public/front/css/responsive.css
+++ b/public/front/css/responsive.css
@@ -32,7 +32,8 @@
 
     /* features section */
     .features_section .feature_detail .feature_box {
-        width: 350px;
+        /* width: 350px; */
+        text-align: left;
     }
 
     .features_section .feature_detail .left_data {
@@ -70,7 +71,7 @@
 
     /* features section */
     .features_section .feature_detail .feature_box {
-        width: 300px;
+        /* width: 300px; */
     }
 
     .features_section .feature_detail .left_data {
@@ -199,6 +200,13 @@
 }
 
 @media screen and (max-width:992px) {
+    .features_section .feature_detail {
+        padding: 30px;
+    }
+
+    .modern_ui_section .design_block li::before {
+        top: 3px;
+    }
 
     /* navigation section */
     .navbar-toggler-icon {
@@ -324,7 +332,7 @@
     }
 
     .banner_section .banner_slider {
-        margin-top: 50px;
+        margin-top: 170px;
     }
 
     .banner_section .banner_slider .left_icon {
@@ -335,9 +343,13 @@
         right: 0;
     }
 
+    .features_section .feature_detail {
+        grid-template-columns: 1fr;
+    }
+
     /* features section */
     .features_section .feature_detail .feature_img {
-        width: 275px;
+        /* width: 275px; */
     }
 
     .features_section .feature_detail .feature_box .data_block {
@@ -345,7 +357,7 @@
     }
 
     .features_section .feature_detail .feature_box {
-        width: 200px;
+        /* width: 200px; */
     }
 
     /* about app section */
@@ -631,6 +643,28 @@
         text-align: center;
     }
 
+    .navbar-expand-lg .navbar-nav .nav-link.dark_btn {
+        font-size: 12px;
+    }
+
+    .navbar-expand-lg .navbar-nav .nav-link {
+        font-size: 14px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .banner_section .banner_slider .slider_frame {
+        width: 320px;
+    }
+
+    .banner_section .banner_slider #frmae_slider {
+        width: 310px;
+    }
+
+    .owl-carousel .owl-item img {
+        height: 183px;
+    }
+
     .row_am {
         padding: 30px 0;
     }
@@ -720,14 +754,14 @@
         top: auto;
         left: auto;
         transform: none;
-        width: 75%;
+        /* width: 75%; */
         margin: 0 auto;
     }
 
     .features_section .feature_detail .feature_box {
         width: 100%;
-        padding: 0 15px;
-        text-align: center;
+        padding: 0 0px;
+        /* text-align: center; */
     }
 
     .features_section .feature_detail .left_data .data_block .icon {
@@ -784,15 +818,16 @@
     }
 
     .modern_ui_section .design_block li {
-        padding-left: 0;
+        /* padding-left: 0; */
+        text-align: left;
         margin-bottom: 30px;
     }
 
     .modern_ui_section .design_block li::before {
-        position: relative;
-        left: auto;
-        top: auto;
-        display: inline-block;
+        /* position: relative; */
+        /* left: auto; */
+        /* top: auto; */
+        /* display: inline-block; */
     }
 
     .modern_ui_section .ui_images img {
