--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -891,7 +891,8 @@ header.fixed .navbar {
     max-width: 100%;
     width: 100%;
     height: 254px;
-    object-fit: cover;
+    object-fit: contain;
+    background-color: #ebf9ff;
 }
 
 
@@ -958,7 +959,20 @@ header.fixed .navbar {
 .features_section .feature_detail .feature_box .data_block {
     margin-bottom: 20px;
     position: relative;
-    padding-left: 70px;
+    padding-left: 35px;
+}
+
+.features_section .feature_detail .feature_box .data_block::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 1px;
+    background-image: url(../images/right_icon.png);
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .features_section .feature_detail .feature_box .data_block h4 {
@@ -1239,10 +1253,15 @@ header.fixed .navbar {
 
 .how_it_works .step_block ul li .step_text .app_icon {
     margin-bottom: 10px;
+    display: flex;
+    justify-content: end;
+    gap: 10px;
 }
 
 .how_it_works .step_block ul li .step_text .app_icon a {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 40px;
     height: 40px;
     border-radius: 100%;
