--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -891,7 +891,8 @@ header.fixed .navbar {
     max-width: 100%;
     width: 100%;
     height: 254px;
-    object-fit: contain;
+    object-fit: cover;
+    object-position: left top;
     background-color: #ebf9ff;
 }
 
